<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Patient Plus</string>
    <string name="action_settings">Settings</string>
    <string name="message">User Login</string>
    <string name="username">Username:</string>
    <string name="login1">Login as Nurse</string>
    <string name="login2">Login as Physician</string>
    <string name="password">Password:</string>
    <string name="job">Login as:</string>
    <string name="invalid"></string>
    <string name="welcome">WELCOME!</string>
    <string name="design">Designed By:\nL.CHEN\nG.GUERRA\nZ.LU\nJ.TRUONG </string>
    <string name="load">LOAD PATIENTS</string>
    <string name="warn"></string>
    <string name="title_activity_search">LOOK UP A PATIENT</string>
    <string name="searchByHCNum">Search patient by health card number:</string>
    <string name="search_hint">i.e. 123410</string>
    <string name="search">Search</string>
    <string name="title_activity_view_patient">PATIENT INFORMATION</string>
    <string name="patient_info"></string>
    <string name="testing"></string>
    <string name="title_activity_view_record">PATIENT RECORDS HISTORY</string>
    <string name="viewrecord">View Record History</string>
    <string name="createrecord">Create/Update a Record</string>
    <string name="records"></string>
    <string name="title_activity_create_record">CREATE/UPDATE RECORDS</string>
    <string name="time_hint">Arrival Time: YYYY-MM-DD-hhmm</string>
    <string name="time_hint1">Which record to update?(Give particular arrival time in format YYYY-MM-DD-hhmm)</string>
    <string name="prompt"></string>
    <string name="bp">Blood Pressure(systolic/diastolic)</string>
    <string name="hr">Heart rate</string>
    <string name="temp">Temperature</string>
    <string name="time">Time updated</string>
    <string name="create">Create\nRecord</string>
    <string name="createtop">Create a new record for this patient with a arrival time:</string>
    <string name="updatetop">Update a specific record\'s vital signs at a particular time:</string>
    <string name="update">Update</string>
    <string name="save">Save All Changes</string>
    <string name="title_activity_main">USER LOGIN</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_nurse">LOAD PATIENT</string>
    <string name="title_activity_main_physician">Find patient/Add prescripton</string>
    <string name="displayPatient">Show Patient Record Below</string>
    <string name="addPrescription">Add prescription for this patient</string>
    <string name="displayByHCNum">Please give a patient\'s health card number:</string>
    <string name="title_activity_add_prescription">Add a prescription</string>
    <string name="timepres">Time prescription added:</string>
    <string name="pres">Give prescription below:</string>
    <string name="addtime">Y/M/D/hh:mm</string>
    <string name="addpres">Medicine: Instructions</string>
    <string name="add">Add this prescription</string>
    <string name="create_patient">Add New Patient</string>
    <string name="view_sorted_list">View Patient Waitlist</string>
    <string name="title_activity_create_new_patient">Create New Patient</string>
    <string name="fill_out_patient_info">Please fill out the patient information:</string>
    <string name="name">Name</string>
    <string name="dob_formate">Date of birth (YYYY-MM-DD)</string>
    <string name="HealthCardNum">Health Card Number</string>
    <string name="title_activity_patient_waitlist">Patient Waitlist</string>
    <string name="waitlist"></string>
    <string name="user_name"></string>
    <string name="title_activity_phy_welcome">Load Patient</string>
    <string name="seenbydoc">Time seen by a doctor</string>
    <string name="saved_prescription"></string>

</resources>
