<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainPhysicianActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/displayByHCNum"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/phyHCNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:hint="@string/search_hint" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addPrescription"
                android:text="@string/addPrescription" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="displayPatient"
                android:text="@string/displayPatient" />

            <TextView
                android:id="@+id/phydisplay"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button1"
                android:layout_alignRight="@+id/editText1"
                android:layout_centerVertical="true"
                android:layout_marginLeft="26dp"
                android:layout_weight="0.41"
                android:text="@string/warn"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>